Added installation of cabextract to allow for consolas.sh to execute.

--- a/ubuntu-14.04/Vagrantfile
+++ b/ubuntu-14.04/Vagrantfile
@@ -31,6 +31,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
 $script = <<SCRIPT
 cd ~/workstation-provision
+echo "Installing cabextract..."
+sudo apt-get -qq install cabextract
 ./provision.sh
 SCRIPT
 
