--- a/ubuntu-14.04/Vagrantfile
+++ b/ubuntu-14.04/Vagrantfile
@@ -5,29 +5,30 @@
 VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-  # All Vagrant configuration is done here. The most common configuration
-  # options are documented and commented below. For a complete reference,
-  # please see the online documentation at vagrantup.com.
+  config.vm.define :ubuntu14_04 do |ubuntu14_04|
+    # All Vagrant configuration is done here. The most common configuration
+    # options are documented and commented below. For a complete reference,
+    # please see the online documentation at vagrantup.com.
 
-  config.vm.provider "virtualbox" do |vbox|
-    vbox.name = "Ubuntu LTS Provisioning Assistant"
-  end
+    ubuntu14_04.provider "virtualbox" do |vbox|
+      vbox.name = "Ubuntu LTS Provisioning Assistant"
+    end
 
-  # Every Vagrant virtual environment requires a box to build off of.
-  config.vm.box = "ubuntu/trusty64"
+    # Every Vagrant virtual environment requires a box to build off of.
+    ubuntu14_04.vm.box = "ubuntu/trusty64"
 
-  # The url from where the 'config.vm.box' box will be fetched if it
-  # doesn't already exist on the user's system.
-  # config.vm.box_url = "http://domain.com/path/to/above.box"
+    # The url from where the 'config.vm.box' box will be fetched if it
+    # doesn't already exist on the user's system.
+    # config.vm.box_url = "http://domain.com/path/to/above.box"
 
-  # Share an additional folder to the guest VM. The first argument is
-  # the path on the host to the actual folder. The second argument is
-  # the path on the guest to mount the folder. And the optional third
-  # argument is a set of non-required options.
-  # config.vm.synced_folder "../data", "/vagrant_data"
+    # Share an additional folder to the guest VM. The first argument is
+    # the path on the host to the actual folder. The second argument is
+    # the path on the guest to mount the folder. And the optional third
+    # argument is a set of non-required options.
+    # config.vm.synced_folder "../data", "/vagrant_data"
 
-  config.vm.synced_folder ".", '/vagrant', disabled: true
-  config.vm.synced_folder ".", "/home/vagrant/workstation-provision/", owner: "vagrant", group: "vagrant"
+    ubuntu14_04.vm.synced_folder ".", '/vagrant', disabled: true
+    ubuntu14_04.vm.synced_folder ".", "/home/vagrant/workstation-provision/", owner: "vagrant", group: "vagrant"
 
 $script = <<SCRIPT
 cd ~/workstation-provision
@@ -36,6 +37,7 @@ sudo apt-get -qq install cabextract
 ./provision.sh
 SCRIPT
 
-  config.vm.provision "shell", inline: $script, privileged: false
+    ubuntu14_04.vm.provision "shell", inline: $script, privileged: false
+  end
 
 end
