--- a/ubuntu-14.04/Vagrantfile
+++ b/ubuntu-14.04/Vagrantfile
@@ -5,15 +5,16 @@
 VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-  config.vm.define :ubuntu14_04 do |ubuntu14_04|
-    # All Vagrant configuration is done here. The most common configuration
+  # All Vagrant configuration is done here. The most common configuration
     # options are documented and commented below. For a complete reference,
     # please see the online documentation at vagrantup.com.
 
-    ubuntu14_04.provider "virtualbox" do |vbox|
+  config.provider "virtualbox" do |vbox|
       vbox.name = "Ubuntu LTS Provisioning Assistant"
     end
 
+
+  config.vm.define :ubuntu14_04 do |ubuntu14_04|   
     # Every Vagrant virtual environment requires a box to build off of.
     ubuntu14_04.vm.box = "ubuntu/trusty64"
 
