--- a/ubuntu-14.04/Vagrantfile
+++ b/ubuntu-14.04/Vagrantfile
@@ -9,9 +9,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     # options are documented and commented below. For a complete reference,
     # please see the online documentation at vagrantup.com.
 
-  config.provider "virtualbox" do |vbox|
+  config.vm.provider "virtualbox" do |vbox|
       vbox.name = "Ubuntu LTS Provisioning Assistant"
-    end
+  end
 
 
   config.vm.define :ubuntu14_04 do |ubuntu14_04|   
