--- a/ubuntu-14.04/Vagrantfile
+++ b/ubuntu-14.04/Vagrantfile
@@ -22,7 +22,7 @@ $script = <<SCRIPT
 cd ~/workstation-provision
 echo "Installing cabextract..."
 sudo apt-get -qq install cabextract
-./provision.sh
+/vagrant/provision.sh
 SCRIPT
 
     ubuntu14_04.vm.provision "shell", inline: $script, privileged: false
