--- a/ubuntu-14.04/Vagrantfile
+++ b/ubuntu-14.04/Vagrantfile
@@ -19,6 +19,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     ubuntu14_04.vm.box = "ubuntu/trusty64"
 
 $script = <<SCRIPT
+cd /vagrant
 echo "Installing cabextract..."
 sudo apt-get -qq install cabextract
 ./provision.sh
