Replaced realpath with standalone solution.

--- a/ubuntu-14.04/Vagrantfile
+++ b/ubuntu-14.04/Vagrantfile
@@ -21,7 +21,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 $script = <<SCRIPT
 cd /vagrant
 echo "Installing cabextract..."
-sudo apt-get -qq install cabextract realpath
+sudo apt-get -qq install cabextract
 ./provision.sh
 SCRIPT
 
