Corrected the script path to the provisioning script.

--- a/ubuntu-14.04/dev-notebook/Vagrantfile
+++ b/ubuntu-14.04/dev-notebook/Vagrantfile
@@ -22,7 +22,7 @@ $script = <<SCRIPT
 cd /vagrant
 echo "Installing cabextract..."
 sudo apt-get -qq install cabextract
-./provision.sh
+../provision.sh
 SCRIPT
 
     ubuntu14_04.vm.provision "shell", inline: $script, privileged: false, args: "dev-notebook"
