Updated the scripts to take advantage of the symlink pathing.

--- a/ubuntu-14.04/dev-notebook/Vagrantfile
+++ b/ubuntu-14.04/dev-notebook/Vagrantfile
@@ -25,7 +25,7 @@ sudo apt-get -qq install cabextract
 ./provision.sh
 SCRIPT
 
-    ubuntu14_04.vm.provision "shell", inline: $script, privileged: false, args: "dev-notebook"
+    ubuntu14_04.vm.provision "shell", inline: $script, privileged: false
   end
 
 end
