Specified synced directory since the Xenial image doesn't provide one by default.

--- a/ubuntu-16.04/dev-notebook/Vagrantfile
+++ b/ubuntu-16.04/dev-notebook/Vagrantfile
@@ -13,6 +13,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         vbox.name = "dev-notebook"
     end
 
+    config.vm.synced_folder "./", "/vagrant"
 
     config.vm.define :devNotebook do |devNotebook|
         # Every Vagrant virtual environment requires a box to build off of.
